tests/snapshots/run_wpt_conformance__onnx_pad_float32_2D_tensor_options_value_default_constant_mode.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "pad.https.any.js",
    "pad float32 2D tensor options.value default constant mode",
    "onnx",
    "PASS",
)
