tests/snapshots/run_wpt_conformance__onnx_pad_float32_2D_tensor_with_options_value_as_NaN.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "pad.https.any.js",
    "pad float32 2D tensor with options.value as NaN",
    "onnx",
    "PASS",
)
